--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "shopshop",
+	"name": "monomorphic-angular2-seed",
 	"version": "1.0.0",
 	"main": "./src",
 	"nativescript": {
-		"id": "com.gft.shopshop",
+		"id": "com.monomorphic-angular2-seed",
 		"tns-android": {
 			"version": "2.1.1"
 		},
