basic code share scenarios defined

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,6 @@
     "platforms": true,
     "lib": true,
     "node_modules": true,
-    "hooks": true,
-    "typings": true,
-    "server/typings": true
+    "hooks": true
   }
 }
