--- a/package.json
+++ b/package.json
@@ -1,82 +1,80 @@
 {
-    "name": "monomorphic-angular2-seed",
-    "version": "1.0.0",
-    "nativescript": {
-        "id": "monomorphic.angular2.seed",
-        "tns-ios": {
-            "version": "2.1.1"
-        },
-        "tns-android": {
-            "version": "2.1.1"
-        }
+  "name": "monomorphic-angular2-seed",
+  "version": "1.0.0",
+  "nativescript": {
+    "id": "monomorphic.angular2.seed",
+    "tns-ios": {
+      "version": "2.1.1"
     },
-    "dependencies": {
-        "tns-core-modules": "next",
-        "nativescript-angular": "next",
-        "nativescript-intl": "^0.0.3",
-        "@angular/core": "2.0.0-rc.4",
-        "@angular/common": "2.0.0-rc.4",
-        "@angular/compiler": "2.0.0-rc.4",
-        "@angular/http": "2.0.0-rc.4",
-        "@angular/platform-browser": "2.0.0-rc.4",
-        "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-        "@angular/platform-server": "2.0.0-rc.4",
-        "@angular/router": "3.0.0-beta.2",
-        "rxjs": "5.0.0-beta.6",
-        "zone.js": "^0.6.12",
-        "reflect-metadata": "^0.1.3",
-        "parse5": "1.4.2",
-        "punycode": "1.3.2",
-        "querystring": "0.2.0",
-        "url": "0.10.3",
-        "body-parser": "1.15.2",
-        "bootstrap": "4.0.0-alpha.2",
-        "core-js": "2.4.0",
-        "express": "4.14.0",
-        "font-awesome": "4.6.3",
-        "lodash": "4.13.1",
-        "multer": "1.1.0",
-        "nativescript-explosionfield": "1.0.2",
-		"request": "2.72.0",
-		"sass-loader": "4.0.0"
-    },
-    "devDependencies": {
-        "angular2-template-loader": "0.4.0",
-		"awesome-typescript-loader": "0.17.0",
-        "babel-traverse": "6.10.4",
-        "babel-types": "6.11.1",
-        "babylon": "6.8.2",
-        "concurrently": "2.1.0",
-        "css-loader": "0.23.1",
-        "es6-promise": "3.0.2",
-        "es6-shim": "0.35.0",
-        "file-loader": "0.9.0",
-        "filewalker": "0.1.3",
-        "html-webpack-plugin": "2.21.0",
-        "json-loader": "0.5.4",
-        "lazy": "1.0.11",
-        "nativescript-dev-sass": "0.1.0",
-        "nativescript-dev-typescript": "0.3.2",
-        "nodemon": "1.9.2",
-        "raw-loader": "0.5.1",
-        "source-map-loader": "0.1.5",
-        "string-replace-loader": "1.0.2",
-        "style-loader": "0.13.1",
-        "to-string-loader": "1.1.4",
-        "ts-node": "1.1.0",
-        "typescript": "1.8.10",
-        "webpack": "1.13.1",
-        "webpack-dev-server": "1.14.1",
-        "webpack-merge": "0.14.0",
-        "sass-loader": "4.0.0"
-    },
-    "scripts": {
-        "postinstall": "git checkout tsconfig.json",
-        "typings": "typings install && cd server && typings install",
-        "server": "ts-node app/main.server.ts",
-        "server:watch": "nodemon --watch 'app/*.ts'  --exec 'ts-node' app/main.server.ts",
-        "webapp": "webpack-dev-server --inline --colors  --port 9000  --content-base ./app/App_Resources/web",
-        "all": "concurrently --kill-others \"npm run webapp\" \"npm run server\"",
-        "start": "npm run webapp"
+    "tns-android": {
+      "version": "2.1.1"
     }
+  },
+  "dependencies": {
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/platform-server": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.2",
+    "body-parser": "1.15.2",
+    "bootstrap": "^4.0.0-alpha.2",
+    "core-js": "2.4.0",
+    "cors": "^2.7.1",
+    "express": "4.14.0",
+    "font-awesome": "4.6.3",
+    "lodash": "4.13.1",
+    "multer": "1.1.0",
+    "nativescript-angular": "next",
+    "nativescript-explosionfield": "1.0.2",
+    "nativescript-intl": "^0.0.3",
+    "parse5": "1.4.2",
+    "punycode": "1.3.2",
+    "querystring": "0.2.0",
+    "reflect-metadata": "^0.1.3",
+    "request": "2.72.0",
+    "rxjs": "5.0.0-beta.6",
+    "tns-core-modules": "next",
+    "url": "0.10.3",
+    "zone.js": "^0.6.12"
+  },
+  "devDependencies": {
+    "angular2-template-loader": "^0.4.0",
+    "awesome-typescript-loader": "^0.17.0",
+    "babel-traverse": "6.10.4",
+    "babel-types": "6.11.1",
+    "babylon": "6.8.2",
+    "codelyzer": "0.0.25",
+    "concurrently": "2.1.0",
+    "css-loader": "0.23.1",
+    "es6-promise": "3.0.2",
+    "es6-shim": "0.35.0",
+    "file-loader": "0.9.0",
+    "filewalker": "0.1.3",
+    "json-loader": "0.5.4",
+    "lazy": "1.0.11",
+    "nativescript-dev-sass": "0.1.0",
+    "nativescript-dev-typescript": "0.3.2",
+    "nodemon": "1.9.2",
+    "raw-loader": "0.5.1",
+    "sass-loader": "4.0.0",
+    "source-map-loader": "0.1.5",
+    "string-replace-loader": "1.0.2",
+    "style-loader": "0.13.1",
+    "to-string-loader": "1.1.4",
+    "ts-node": "1.1.0",
+    "typescript": "1.8.10",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-merge": "^0.8.4"
+  },
+  "scripts": {
+    "server": "ts-node app/main.server.ts",
+    "server:watch": "nodemon --watch 'app/server/**.ts'  --exec 'ts-node' app/main.server.ts",
+    "webapp": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 9000  --content-base ./app/App_Resources/web",
+    "all": "concurrently --kill-others \"npm run webapp\" \"npm run server\"",
+    "start": "npm run webapp"
+  }
 }
