--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ hooks
 typings
 server/typings
 
+dist
 lib
 .baseDir.ts
 .tscache
@@ -21,4 +22,3 @@ server/**/*.map
 common/**/*.js
 common/**/*.map
 
-lib
