--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
     }
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/platform-server": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
+    "tns-core-modules": "next",
+    "nativescript-angular": "next",
+    "nativescript-intl": "^0.0.2",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/platform-server": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "rxjs": "5.0.0-beta.11",
+    "zone.js": "^0.6.17",
+    "reflect-metadata": "^0.1.8",
+    "parse5": "1.3.2",
+    "punycode": "1.3.2",
+    "querystring": "0.2.0",
+    "url": "0.10.3",
     "body-parser": "1.15.2",
     "bootstrap": "^4.0.0-alpha.2",
     "core-js": "2.4.0",
@@ -27,18 +37,8 @@
     "font-awesome": "4.6.3",
     "lodash": "4.13.1",
     "multer": "1.1.0",
-    "nativescript-angular": "next",
     "nativescript-explosionfield": "1.0.2",
-    "nativescript-intl": "^0.0.3",
-    "parse5": "1.4.2",
-    "punycode": "1.3.2",
-    "querystring": "0.2.0",
-    "reflect-metadata": "^0.1.3",
-    "request": "2.72.0",
-    "rxjs": "5.0.0-beta.6",
-    "tns-core-modules": "next",
-    "url": "0.10.3",
-    "zone.js": "^0.6.12"
+    "request": "2.72.0"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
