--- a/package.json
+++ b/package.json
@@ -11,34 +11,36 @@
     }
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/platform-server": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/platform-server": "2.0.0",
+    "@angular/router": "3.0.0",
     "body-parser": "1.15.2",
-    "bootstrap": "^4.0.0-alpha.2",
     "core-js": "2.4.0",
     "cors": "^2.7.1",
     "express": "4.14.0",
     "font-awesome": "4.6.3",
     "lodash": "4.13.1",
+    "material-design-lite": "^1.2.1",
     "multer": "1.1.0",
-    "nativescript-angular": "next",
+    "nativescript-angular": "1.0.0",
     "nativescript-explosionfield": "1.0.2",
-    "nativescript-intl": "0.0.4",
-    "parse5": "1.4.2",
+    "nativescript-intl": "^0.0.4",
+    "parse5": "1.3.2",
     "punycode": "1.3.2",
     "querystring": "0.2.0",
     "reflect-metadata": "^0.1.8",
     "request": "2.72.0",
-    "rxjs": "5.0.0-beta.11",
-    "tns-core-modules": "next",
+    "rxjs": "5.0.0-beta.12",
+    "tns-core-modules": "^2.3.0",
     "url": "0.10.3",
-    "zone.js": "0.6.17"
+    "zone.js": "^0.6.21",
+    "bootstrap": "^4.0.0-alpha.2"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.5.0",
@@ -48,6 +50,7 @@
     "babylon": "6.8.2",
     "codelyzer": "0.0.28",
     "concurrently": "2.1.0",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "es6-promise": "3.0.2",
     "es6-shim": "0.35.0",
