--- a/app/App_Resources/Android/app.gradle
+++ b/app/App_Resources/Android/app.gradle
@@ -8,7 +8,7 @@
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "monomorphic.angular2.seed"  
+    applicationId = "org.appverse.pang"  
   }  
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
