+Nativescript-theme-core added to dependencies +.gitignnore updated with nativescript-theme-core files inside app directory +Tracking submit timeout extended

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,14 @@ lib
 *.css
 *.traineddata
 
+app/*.scss
 app/**/*.js
 app/**/*.map
+app/css
+app/theme-core-scss
+!app/client/*.scss
+!app/styles/*.scss
+!app/app.scss
 
 server/**/*.js
 server/**/*.map
