--- a/package.json
+++ b/package.json
@@ -1,88 +1,89 @@
 {
-    "name": "pang",
-    "version": "1.0.0",
-    "license": "SEE LICENSE IN LICENCE.md",
-    "readme": "SEE LICENSE IN README.md",
-    "repository": "https://github.com/Appverse/PANG-Polymorphic-ANGular-seed",
-    "nativescript": {
-        "id": "org.appverse.pang",
-        "tns-android": {
-            "version": "2.3.0"
-        },
-        "tns-ios": {
-            "version": "2.3.0"
-        }
+  "name": "pang",
+  "version": "1.0.0",
+  "license": "SEE LICENSE IN LICENCE.md",
+  "readme": "SEE LICENSE IN README.md",
+  "repository": "https://github.com/Appverse/PANG-Polymorphic-ANGular-seed",
+  "nativescript": {
+    "id": "org.appverse.pang",
+    "tns-android": {
+      "version": "2.3.0"
     },
-    "dependencies": {
-        "@angular/common": "2.0.0",
-        "@angular/compiler": "2.0.0",
-        "@angular/core": "2.0.0",
-        "@angular/forms": "2.0.0",
-        "@angular/http": "2.0.0",
-        "@angular/platform-browser": "2.0.0",
-        "@angular/platform-browser-dynamic": "2.0.0",
-        "@angular/platform-server": "2.0.0",
-        "@angular/router": "3.0.0",
-        "body-parser": "1.15.2",
-        "core-js": "2.4.0",
-        "cors": "^2.7.1",
-        "express": "4.14.0",
-        "font-awesome": "4.6.3",
-        "lodash": "4.13.1",
-        "material-design-lite": "^1.2.1",
-        "multer": "1.1.0",
-        "nativescript-angular": "1.0.0",
-        "nativescript-explosionfield": "1.0.2",
-        "nativescript-intl": "^0.0.4",
-        "parse5": "1.3.2",
-        "punycode": "1.3.2",
-        "querystring": "0.2.0",
-        "reflect-metadata": "^0.1.8",
-        "request": "2.72.0",
-        "rxjs": "5.0.0-beta.12",
-        "tns-core-modules": "^2.3.0",
-        "url": "0.10.3",
-        "zone.js": "^0.6.21",
-        "bootstrap": "^4.0.0-alpha.2"
-    },
-    "devDependencies": {
-        "angular2-template-loader": "^0.5.0",
-        "awesome-typescript-loader": "^0.17.0",
-        "babel-traverse": "6.10.4",
-        "babel-types": "6.11.1",
-        "babylon": "6.8.2",
-        "codelyzer": "0.0.28",
-        "concurrently": "2.1.0",
-        "copy-webpack-plugin": "^3.0.1",
-        "css-loader": "^0.25.0",
-        "es6-promise": "3.0.2",
-        "es6-shim": "0.35.0",
-        "file-loader": "0.9.0",
-        "filewalker": "0.1.3",
-        "json-loader": "0.5.4",
-        "lazy": "1.0.11",
-        "nativescript-dev-sass": "^0.3.0",
-        "nativescript-dev-typescript": "0.3.2",
-        "node-sass": "^3.9.3",
-        "nodemon": "1.9.2",
-        "raw-loader": "0.5.1",
-        "sass-loader": "^4.0.2",
-        "semver": "^5.3.0",
-        "source-map-loader": "0.1.5",
-        "string-replace-loader": "^1.0.3",
-        "style-loader": "0.13.1",
-        "to-string-loader": "1.1.4",
-        "ts-node": "1.1.0",
-        "typescript": "1.8.10",
-        "webpack": "^1.12.9",
-        "webpack-dev-server": "^1.14.0",
-        "webpack-merge": "^0.14.1"
-    },
-    "scripts": {
-        "server": "ts-node app/main.server.ts",
-        "server:watch": "nodemon --watch 'app/server/**.ts'  --exec 'ts-node' app/main.server.ts",
-        "webapp": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 9000  --content-base ./app/App_Resources/web",
-        "all": "concurrently --kill-others \"npm run webapp\" \"npm run server\"",
-        "start": "npm run webapp"
+    "tns-ios": {
+      "version": "2.3.0"
     }
+  },
+  "dependencies": {
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/platform-server": "2.0.0",
+    "@angular/router": "3.0.0",
+    "body-parser": "1.15.2",
+    "bootstrap": "^4.0.0-alpha.2",
+    "core-js": "2.4.0",
+    "cors": "^2.7.1",
+    "express": "4.14.0",
+    "font-awesome": "4.6.3",
+    "lodash": "4.13.1",
+    "material-design-lite": "^1.2.1",
+    "multer": "1.1.0",
+    "nativescript-angular": "1.0.0",
+    "nativescript-explosionfield": "1.0.2",
+    "nativescript-intl": "^0.0.4",
+    "nativescript-theme-core": "^0.1.2",
+    "parse5": "1.3.2",
+    "punycode": "1.3.2",
+    "querystring": "0.2.0",
+    "reflect-metadata": "^0.1.8",
+    "request": "2.72.0",
+    "rxjs": "5.0.0-beta.12",
+    "tns-core-modules": "^2.3.0",
+    "url": "0.10.3",
+    "zone.js": "^0.6.21"
+  },
+  "devDependencies": {
+    "angular2-template-loader": "^0.5.0",
+    "awesome-typescript-loader": "^0.17.0",
+    "babel-traverse": "6.10.4",
+    "babel-types": "6.11.1",
+    "babylon": "6.8.2",
+    "codelyzer": "0.0.28",
+    "concurrently": "2.1.0",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.25.0",
+    "es6-promise": "3.0.2",
+    "es6-shim": "0.35.0",
+    "file-loader": "0.9.0",
+    "filewalker": "0.1.3",
+    "json-loader": "0.5.4",
+    "lazy": "1.0.11",
+    "nativescript-dev-sass": "^0.4.0",
+    "nativescript-dev-typescript": "0.3.2",
+    "node-sass": "^3.9.3",
+    "nodemon": "1.9.2",
+    "raw-loader": "0.5.1",
+    "sass-loader": "^4.0.2",
+    "semver": "^5.3.0",
+    "source-map-loader": "0.1.5",
+    "string-replace-loader": "^1.0.3",
+    "style-loader": "0.13.1",
+    "to-string-loader": "1.1.4",
+    "ts-node": "1.1.0",
+    "typescript": "1.8.10",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-merge": "^0.14.1"
+  },
+  "scripts": {
+    "server": "ts-node app/main.server.ts",
+    "server:watch": "nodemon --watch 'app/server/**.ts'  --exec 'ts-node' app/main.server.ts",
+    "webapp": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 9000  --content-base ./app/App_Resources/web",
+    "all": "concurrently --kill-others \"npm run webapp\" \"npm run server\"",
+    "start": "npm run webapp"
+  }
 }
