--- a/package.json
+++ b/package.json
@@ -7,77 +7,78 @@
   "nativescript": {
     "id": "org.appverse.pang",
     "tns-android": {
-      "version": "2.3.0"
+      "version": "2.4.1"
     },
     "tns-ios": {
-      "version": "2.3.0"
+      "version": "2.4.0"
     }
   },
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/platform-server": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/common": "2.4.3",
+    "@angular/compiler": "2.4.3",
+    "@angular/core": "2.4.3",
+    "@angular/forms": "2.4.3",
+    "@angular/http": "2.4.3",
+    "@angular/platform-browser": "2.4.3",
+    "@angular/platform-browser-dynamic": "2.4.3",
+    "@angular/platform-server": "2.4.3",
+    "@angular/router": "3.4.3",
     "body-parser": "1.15.2",
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.0",
-    "cors": "^2.7.1",
+    "cors": "2.8.1",
     "express": "4.14.0",
     "font-awesome": "4.6.3",
     "lodash": "4.13.1",
-    "material-design-lite": "^1.2.1",
+    "material-design-lite": "1.3.0",
     "multer": "1.1.0",
-    "nativescript-angular": "1.0.0",
+    "nativescript-angular": "1.4.1",
     "nativescript-explosionfield": "1.0.2",
-    "nativescript-intl": "^0.0.4",
-    "nativescript-theme-core": "^0.1.2",
+    "nativescript-intl": "0.0.10",
+    "nativescript-theme-core": "0.1.3",
     "parse5": "1.3.2",
     "punycode": "1.3.2",
     "querystring": "0.2.0",
-    "reflect-metadata": "^0.1.8",
+    "reflect-metadata": "0.1.10",
     "request": "2.72.0",
-    "rxjs": "5.0.0-beta.12",
-    "tns-core-modules": "^2.3.0",
-    "url": "0.10.3",
-    "zone.js": "^0.6.21"
+    "rxjs": "5.0.3",
+    "tns-core-modules": "2.5.1",
+    "url": "0.10.3"
   },
   "devDependencies": {
-    "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "^0.17.0",
+    "angular2-template-loader": "0.5.0",
+    "awesome-typescript-loader": "3.1.2",
     "babel-traverse": "6.10.4",
     "babel-types": "6.11.1",
     "babylon": "6.8.2",
     "codelyzer": "0.0.28",
     "concurrently": "2.1.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
+    "copy-webpack-plugin": "3.0.1",
+    "css-loader": "0.25.0",
     "es6-promise": "3.0.2",
     "es6-shim": "0.35.0",
     "file-loader": "0.9.0",
     "filewalker": "0.1.3",
     "json-loader": "0.5.4",
     "lazy": "1.0.11",
-    "nativescript-dev-sass": "^0.4.0",
+    "nativescript-dev-sass": "0.4.2",
     "nativescript-dev-typescript": "0.3.2",
-    "node-sass": "^3.9.3",
+    "node-sass": "3.13.1",
     "nodemon": "1.9.2",
     "raw-loader": "0.5.1",
-    "sass-loader": "^4.0.2",
-    "semver": "^5.3.0",
+    "sass-loader": "4.1.1",
+    "semver": "5.3.0",
     "source-map-loader": "0.1.5",
-    "string-replace-loader": "^1.0.3",
+    "string-replace-loader": "1.0.5",
     "style-loader": "0.13.1",
     "to-string-loader": "1.1.4",
     "ts-node": "1.1.0",
-    "typescript": "1.8.10",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
-    "webpack-merge": "^0.14.1"
+    "tslint": "3.15.1",
+    "typescript": "2.1.6",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.3",
+    "webpack-merge": "0.14.1",
+    "zone.js": "0.7.2"
   },
   "scripts": {
     "server": "ts-node app/main.server.ts",
